--- a/img1.css
+++ b/img1.css
@@ -1,10 +1,14 @@
 
-table tr td div {
+table tr td  {
     border: 1px solid rgb(0, 0, 0);
 border-radius: 20%;
-
-padding: 8px;
+width: 40px;
+padding: 5px;
 margin: 8px;
-box-shadow: 2px 3px 2px 3px rgb(36, 36, 36)
+box-shadow: 2px 2px 2px 1px rgb(148, 146, 146)
 
+}
+table{
+    border-collapse: separate;
+    border-spacing: 10px;
 }
